Testing all spacing fixes

--- a/style.css
+++ b/style.css
@@ -77,21 +77,21 @@ h2 {
 	position: relative;
 	height: 100vh;
 	width: auto;
-	margin: 23.4vh 0 0 0;
+	margin: 15.4vh 0 0 0;
 }
 
 #section4 {
 	position: relative;
 	height: 100vh;
 	width: auto;
-	margin: 15.6vh 0 0 0;
+	margin: 7.6vh 0 0 0;
 }
 
 #section5 {
 	position: relative;
 	height: 100vh;
 	width: auto;
-	margin: 18.5vh 0 0 0;
+	margin: 10.5vh 0 0 0;
 }
 
 #background1 {
